[gd_scene load_steps=5 format=2]

[ext_resource path="res://planetarium/gui_top/planetarium_gui.gd" type="Script" id=1]
[ext_resource path="res://planetarium/gui_top/pl_info.tscn" type="PackedScene" id=3]
[ext_resource path="res://planetarium/gui_top/pl_options.tscn" type="PackedScene" id=4]
[ext_resource path="res://planetarium/gui_top/pl_navigator.tscn" type="PackedScene" id=5]

[node name="PlanetariumGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlInfo" parent="." instance=ExtResource( 3 )]
margin_left = 7.0
margin_top = 7.0

[node name="PlOptions" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -252.0
margin_top = -406.0
margin_right = -13.0
margin_bottom = -106.0

[node name="PlNavigator" parent="." instance=ExtResource( 5 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -62.0
margin_right = 587.0
